<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/relHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fourfive"
        android:background="@color/color_e65e5e" >

        <morocco.mycom.myrecorder.utils.CustomTextViewRoboto
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/passcode"
            android:textColor="@color/white"
            android:textSize="@dimen/oneseven" />
    </RelativeLayout>

    <morocco.mycom.myrecorder.utils.CustomTextViewRoboto
        android:id="@+id/lblPasscode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relHeader"
        android:layout_marginTop="@dimen/onefive"
        android:gravity="center"
        android:text="@string/enter_passcode"
        android:textColor="@color/color_e65e5e"
        android:textSize="@dimen/oneseven" />

    <LinearLayout
        android:id="@+id/llPassCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblPasscode"
        android:layout_marginBottom="@dimen/onefive"
        android:layout_marginTop="@dimen/onefive"
        android:gravity="center" >

        <CheckBox
            android:id="@+id/checkOne"
            android:layout_width="@dimen/onefive"
            android:layout_height="@dimen/onefive"
            android:layout_margin="@dimen/four"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />

        <CheckBox
            android:id="@+id/checkTwo"
            android:layout_width="@dimen/onefive"
            android:layout_height="@dimen/onefive"
            android:layout_margin="@dimen/four"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />

        <CheckBox
            android:id="@+id/checkThree"
            android:layout_width="@dimen/onefive"
            android:layout_height="@dimen/onefive"
            android:layout_margin="@dimen/four"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />

        <CheckBox
            android:id="@+id/checkFour"
            android:layout_width="@dimen/onefive"
            android:layout_height="@dimen/onefive"
            android:layout_margin="@dimen/four"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView"
        android:layout_below="@id/llPassCode"
        android:fillViewport="true" >

        <LinearLayout
            android:id="@+id/llKeyPad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/seven"
                android:gravity="center"
                android:orientation="horizontal" >

                <morocco.mycom.myrecorder.utils.CustomButtonHelvetica
                    android:id="@+id/btn1"
                    style="@style/buttonKeyPadStyle"
                    android:layout_width="@dimen/sixzero"
                    android:layout_height="@dimen/sixzero"
                    android:text="1" />

                <morocco.mycom.myrecorder.utils.CustomButtonHelvetica
                    android:id="@+id/btn2"
                    style="@style/buttonKeyPadStyle"
                    android:layout_width="@dimen/sixzero"
                    android:layout_height="@dimen/sixzero"
                    android:text="2" />

                <morocco.mycom.myrecorder.utils.CustomButtonHelvetica
                    android:id="@+id/btn3"
                    style="@style/buttonKeyPadStyle"
                    android:layout_width="@dimen/sixzero"
                    android:layout_height="@dimen/sixzero"
                    android:text="3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/seven"
                android:gravity="center"
                android:orientation="horizontal" >

                <morocco.mycom.myrecorder.utils.CustomButtonHelvetica
                    android:id="@+id/btn4"
                    style="@style/buttonKeyPadStyle"
                    android:layout_width="@dimen/sixzero"
                    android:layout_height="@dimen/sixzero"
                    android:text="4" />

                <morocco.mycom.myrecorder.utils.CustomButtonHelvetica
                    android:id="@+id/btn5"
                    style="@style/buttonKeyPadStyle"
                    android:layout_width="@dimen/sixzero"
                    android:layout_height="@dimen/sixzero"
                    android:text="5" />

                <morocco.mycom.myrecorder.utils.CustomButtonHelvetica
                    android:id="@+id/btn6"
                    style="@style/buttonKeyPadStyle"
                    android:layout_width="@dimen/sixzero"
                    android:layout_height="@dimen/sixzero"
                    android:text="6" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/seven"
                android:gravity="center"
                android:orientation="horizontal" >

                <morocco.mycom.myrecorder.utils.CustomButtonHelvetica
                    android:id="@+id/btn7"
                    style="@style/buttonKeyPadStyle"
                    android:layout_width="@dimen/sixzero"
                    android:layout_height="@dimen/sixzero"
                    android:text="7" />

                <morocco.mycom.myrecorder.utils.CustomButtonHelvetica
                    android:id="@+id/btn8"
                    style="@style/buttonKeyPadStyle"
                    android:layout_width="@dimen/sixzero"
                    android:layout_height="@dimen/sixzero"
                    android:text="8" />

                <morocco.mycom.myrecorder.utils.CustomButtonHelvetica
                    android:id="@+id/btn9"
                    style="@style/buttonKeyPadStyle"
                    android:layout_width="@dimen/sixzero"
                    android:layout_height="@dimen/sixzero"
                    android:text="9" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/seven"
                android:gravity="center"
                android:orientation="horizontal" >

                <morocco.mycom.myrecorder.utils.CustomButtonHelvetica
                    android:id="@+id/btn"
                    style="@style/buttonKeyPadStyle"
                    android:layout_width="@dimen/sixzero"
                    android:layout_height="@dimen/sixzero"
                    android:text="1"
                    android:visibility="invisible" />

                <morocco.mycom.myrecorder.utils.CustomButtonHelvetica
                    android:id="@+id/btn0"
                    style="@style/buttonKeyPadStyle"
                    android:layout_width="@dimen/sixzero"
                    android:layout_height="@dimen/sixzero"
                    android:text="0" />

                <ImageView
                    android:id="@+id/btndelete"
                    android:layout_width="@dimen/sixzero"
                    android:layout_height="@dimen/sixzero"
                    android:layout_marginLeft="@dimen/seven"
                    android:layout_marginRight="@dimen/seven"
                    android:background="@drawable/passcode_selector"
                    android:clickable="true"
                    android:padding="@dimen/twozero"
                    android:src="@drawable/close_selector" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" >
    </com.google.android.gms.ads.AdView>

</RelativeLayout>